# Operating-Systems-labs

Akhmetshin.Raul/lab2/: CMakeLists.txt  build.sh
Akhmetshin.Raul/lab2/client/: client.cpp  goat.cpp  goat.h
Akhmetshin.Raul/lab2/connection/: conn.h  conn_fifo.cpp  conn_mq.cpp  conn_shm.cpp
Akhmetshin.Raul/lab2/host/: host.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wolf.cpp  wolf.h
Akhmetshin.Raul/lab2/model/: game.h  semaphores.h
Baev.Daniil/lab3/: CMakeLists.txt  MSMP_queue.hpp  MSMP_queueTest.cpp  MSMP_queueTest.h  build.sh  config.txt  lockFreeQueue.hpp  lockFreeQueueTest.cpp  lockFreeQueueTest.h  test.cpp
Darizhapov_Yampil/lab_2/: CMakeLists.txt  Makefile
Darizhapov_Yampil/lab_2/client/: client.hpp
Darizhapov_Yampil/lab_2/host/: host.hpp
Fisyuk.Aleksey/lab1/: main.cpp
Fisyuk.Aleksey/lab1/daemon/: Daemon.cpp  Daemon.hpp  Parser.cpp  Parser.hpp
Fisyuk.Aleksey/lab2/: CMakeLists.txt
Fisyuk.Aleksey/lab2/src/client/: client.cpp  clientHandler.cpp  clientHandler.hpp
Fisyuk.Aleksey/lab2/src/conn/: IConn.hpp  client_info.hpp
Fisyuk.Aleksey/lab2/src/gui/: ChatWindow.h  ChatWindow.ui  gui.cpp  gui.h  ui_ChatWindow.h
Fisyuk.Aleksey/lab2/src/host/: host.cpp  hostHandler.cpp  hostHandler.hpp
Fisyuk.Aleksey/lab2/src/utils/: safeQueue.h
Geoffrey.Gerock/lab1/: Deleter.cpp
Khripunkov.Dmitry/lab1/: build.sh
Khripunkov.Dmitry/lab1/include/: config.hpp
Khripunkov.Dmitry/lab1/src/: daemon.cpp
Kozhevnikova.Diana/lab1/: build.sh
Kozhevnikova.Diana/lab1/daemon/: daemon.cpp  daemon.h
Kozhevnikova.Diana/lab2/: CMakeLists.txt
Kozhevnikova.Diana/lab2/client/: client.cpp  client.h
Kozhevnikova.Diana/lab2/connections/: conn_mmap.cpp  conn_pipe.cpp  conn_shm.cpp
Kozhevnikova.Diana/lab2/gui/: gui.cpp  gui.h  windowChat.h
Kozhevnikova.Diana/lab2/host/: host.cpp  host.h
Mordovin.Nikolay/lab1/: daemon.cpp  daemon.h
Mordovin.Nikolay/lab2/: CMakeLists.txt
Mordovin.Nikolay/lab2/client/: client.cpp  client.h
Mordovin.Nikolay/lab2/connections/: conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_sock.cpp  conn_sock.h  connection.h
Mordovin.Nikolay/lab2/host/: host.cpp  host.h
Mordovin.Nikolay/lab2/messages/: messages.cpp  messages.h
Mordovin.Nikolay/lab2/window/: ChatWin.ui
Popov.Ivan/lab1/: config.h  daemon.cpp  daemon.h
Popov.Ivan/lab2/: CMakeLists.txt  build.sh
Popov.Ivan/lab2/client/: client.cpp  client.h
Popov.Ivan/lab2/connections/: conn_fifo.cpp  conn_fifo.h  conn_seg.cpp  conn_seg.h  conn_shm.cpp  conn_shm.h  connectionInterface.h
Popov.Ivan/lab2/gui/: MainWindow.h  gui.cpp  gui.h  mainwindow.ui
Popov.Ivan/lab2/host/: host.cpp  host.h
Popov.Ivan/lab2/messageQueue/: messageQueue.cpp  messageQueue.h
Sachuk.Alex/lab3/: CMakeList.txt  CMakeLists.txt  build.sh  main  main.cpp
Sachuk.Alex/lab3/set/: fine_set.h  opt_set.h  set.h
Sachuk.Alex/lab3/tester/: tester.h  utils.h
Shvarts Aleksandr/lab1/: CMakeLists.txt  Daemon.cpp  Daemon.h  Notify.cpp  Notify.h  build.sh  config.txt  main.cpp  readme.md  script.sh
Surname.Name/lab1/: CMakeLists.txt  ConfigItem.cpp  ConfigItem.h  ConfigReader.cpp  ConfigReader.h  Deleter.cpp  Deleter.h  main.cpp
lab_1/: ConfigParser.h  Daemon.cpp  build.sh  cfg  daemon_main.cpp
lab_1/src/: ConfigParser.cpp  ConfigParser.h  Daemon.cpp  Daemon.h  RC.h
lab_1/srcFiles/: twitch_pasta.txt
lab_2/: CMakeLists.txt
